--- a/style.css
+++ b/style.css
@@ -554,6 +554,18 @@ nav {
     justify-content: center;
     color: white;
     font-size: 3rem;
+    overflow: hidden;
+}
+
+.project-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: var(--transition);
+}
+
+.project-img img:hover {
+    transform: scale(1.05);
 }
 
 .project-content {
